# jobscraper-1

./: .gitignore  231111_jobs_2.csv  231111jobs.csv  231117_data_jobs.csv  231117_developer_jobs.csv  231117_ux_jobs.csv  README.md  __archive.py  archive.txt  config.json  config_dummy.json  jobscraper.code-workspace  main.py  pyproject.toml  template.txt
inputs/: 220727_sciscraper_13.csv  220727_sciscraper_24.csv  220727_sciscraper_96.csv  220727_sciscraper_97.csv
scrape/: builtinscrape.py  configs.py  coverletterwriter.py  create_spreadsheet.py  log.py  main.py  namefetcher.py  one_off_scraper.py  striptags.py  urls_from_search_query.py  web_funcs.py  web_scraper.py
scrape/src/: config.json  configs.py  coverletterwriter.py  jobspicker.py  letter_format.json  log.py  striptags.py
src/: config.json  configs.py  coverletterwriter.py  credentials.env  jobspicker.py  letter_format.json  log.py  logging_config.json  persona.env  striptags.py  syncgoogle.py
tests/: conftest.py  test_jobspicker.py  test_namefetch.py
word_templates/: brand_names.txt  company_names.txt  coverletter_template.txt
words/: removelist.txt
