[tool.poetry]
name = "jobscraper"
version = "1.0"
description = "A bulk job listing webscraper and cover letter writer."
authors = ["Pathos315 <john.fallot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
reportlab = "^4.0.7"
python-jobspy = "^1.1.3"
metadata-parser = "^0.12.0"
requests = "^2.31.0"
nltk = "^3.8.1"
tld = "^0.13"
numpy = "^1.26.3"
google = "^3.0.0"
requests-html = "^0.10.0"
pyppeteer = "^1.0.2"
selenium = "^4.17.2"
python-dotenv = "^1.0.1"
httpx = "^0.26.0"
selectolax = "^0.3.20"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
